finish my_inject method

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,5 @@
 AllCops:
+  DisabledByDefault: true
   Exclude:
     - "Guardfile"
     - "Rakefile"
@@ -30,6 +31,9 @@ Style/DefWithParentheses:
   Enabled: false
 Style/FrozenStringLiteralComment:
   EnforcedStyle: never
+Style/CaseEquality:
+  Enabled: false
+
 
 Layout/HashAlignment:
   EnforcedColonStyle: key
